templates/welcome-client_template.yaml
---
# Source: welcome-client/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
# Source: welcome-client/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-client-service
  namespace: frontend
spec:
  selector:
    app: welcome-client
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
---
# Source: welcome-client/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-client-deployment
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-client
  template:
    metadata:
      labels:
        app: welcome-client
    spec:
      containers:
        - name: welcome-client
          image: lucassandin/welcome-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
# Source: welcome-client/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-client-ingress
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: client.34.67.168.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-client-service
                port:
                  number: 80
